2004-08-05  Andrew Haley  <aph@redhat.com>

	* java/net/URLClassLoader.java (JarURLLoader.JarURLLoader): Look
	aside for "GCJLIBS" in directory where jarfiles are loaded.	
	(JarURLLoader.getClass): New method.
	(JarURLLoader.toString):  New method.
	(FileResource.toString):  New method.
	* java/lang/natClassLoader.cc (_Jv_RegisterClassHookDefault):
	Remove "Duplicate class registration: " bug.
	(_registerClass): New method.
	* java/lang/natClass.cc (_Jv_LinkSymbolTable): Check method index.
	(_Jv_LinkSymbolTable): Call _Jv_LayoutClass().
	Add debugging.
	(_Jv_LayoutClass): Use getSuperclass() rather than directly
	accessing the field.
	* java/lang/ClassLoader.java (SharedLibHelpers): New variable.
	(defineClass): Call gcj to JIT-compile a class.
	(_registerClass): New method.
	* gnu/gcj/runtime/SharedLibHelper.java (findHelper): A shared
	library name can refer to more than one loaded library, so use a
	Set of SharedLibHelpers.
	If a shared library is already loaded, take a copy.
	(copyFile): New function.

	* testsuite/libjava.compile/compile.exp: Force
	-findirect-dispatch.

	* java/security/BasicPermission.java: Remove bogus checks.

	* java/lang/System.java (getenv0): New method.
	* java/lang/natSystem.cc (getenv0): New method.

2004-05-24  Andrew Haley  <aph@redhat.com>

	* java/lang/natClass.cc (_Jv_LayoutClass): Remove warning message.

2004-04-20  Bryce McKinlay  <mckinlay@redhat.com>

	* Merged with HEAD as of 20040514. Diff against
	gcj-abi-2-merge-20040514.

2004-04-16  Andrew Haley  <aph@redhat.com>

	* java/lang/natClassLoader.cc (_Jv_WaitForState): Call
	_Jv_LayoutClass.
	(_Jv_PrepareCompiledClass): Cast address to uaddr for comparison.
	(_Jv_PrepareCompiledClass): If we throw an exception during
	preparation, restore state.
	(ClassLoader::getClassLoader0): New method.

	* java/lang/natClass.cc (get_alignment_from_class): Moved here
	from resolve.cc.
	(ALIGNOF): Use offsetof, not __alignof__.
	(_Jv_ResolveClassRef): Resolve a reference to a class in a