@@ -1,3 +1,8 @@
+2004-08-10  Mark Wielaard  <mark@klomp.org>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (interpret.lo): New rule.
+
 2004-08-05  Andrew Haley  <aph@redhat.com>
 
 	* java/net/URLClassLoader.java (JarURLLoader.JarURLLoader): Look
